<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">

    <Button
        android:id="@+id/show_deviation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_deviation"
        android:textAllCaps="false"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.constraintlayout.widget.Group
        android:id="@+id/today_weather_views"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="current_weather, current_temperature, temperature, current_wind_speed, wind_speed"
        />

    <TextView
        android:id="@+id/current_weather"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/today_weather"
        android:textSize="22sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/show_deviation"/>

    <ProgressBar
        android:id="@+id/current_weather_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:theme="@style/ProgressBarTheme"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/current_temperature"/>

    <ImageView
        android:id="@+id/image_cloud"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:src="@drawable/ic_cloud"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/current_weather"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/current_temperature"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintWidth_percent="0.5"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_cloud"
        android:text="@string/current_temperature"/>

    <TextView
        android:id="@+id/temperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="@id/current_temperature"
        app:layout_constraintEnd_toEndOf="@id/current_temperature"
        app:layout_constraintTop_toBottomOf="@id/current_temperature"
        android:textStyle="bold"
        tools:text="14 °C / 39 °F"/>

    <TextView
        android:id="@+id/current_wind_speed"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        app:layout_constraintWidth_percent="0.5"
        app:layout_constraintStart_toEndOf="@id/current_temperature"
        app:layout_constraintTop_toTopOf="@id/current_temperature"
        android:text="@string/current_wind_speed"/>

    <TextView
        android:id="@+id/wind_speed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/current_wind_speed"
        app:layout_constraintEnd_toEndOf="@id/current_wind_speed"
        app:layout_constraintTop_toTopOf="@id/temperature"
        android:textStyle="bold"
        tools:text="0.5m/s" />

    <TextView
        android:id="@+id/error_loading_current_weather"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/show_deviation"
        android:visibility="gone"
        android:text="@string/error_loading_data"
        android:textSize="20sp"
        android:textStyle="bold"
        />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/deviation_views"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="deviation_label, deviation" />

    <TextView
        android:id="@+id/deviation_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/deviation"
        app:layout_constraintTop_toBottomOf="@id/temperature"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/deviation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/deviation_label"
        app:layout_constraintEnd_toEndOf="@id/deviation_label"
        app:layout_constraintTop_toBottomOf="@id/deviation_label"
        android:textStyle="bold"
        tools:text="0.1" />

    <TextView
        android:id="@+id/error_loading_deviation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/temperature"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone"
        android:text="@string/error_loading_data"
        android:textSize="20sp"
        android:textStyle="bold"
        />

    <ProgressBar
        android:id="@+id/deviation_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:theme="@style/ProgressBarTheme"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/temperature"/>

</androidx.constraintlayout.widget.ConstraintLayout>